# android-opencv-realtime-edge-detection

./: README.md  build.gradle  settings.gradle
app/: README_PROJECT.md  build.gradle
app/src/: auto_commit.sh
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/app/: CameraController.kt  GLRenderer.kt  MainActivity.kt  NativeBridge.java
web/: index.html
web/src/: index.ts
